// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact renders correctly with a single link 1`] = `
.c0 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c8 {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c9 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c9:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c10 {
  font-size: 1rem;
  font-weight: 700;
}

.c7 {
  line-height: 1.7;
  margin-bottom: 2rem;
  max-width: 600px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (hover: hover) {
  .c9:hover {
    color: var(--color-tertiary);
  }
}

<div>
  <section
    class="c0"
    id="contact"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Contact
      </p>
      <h2
        class="c4 c5"
      >
        Get in touch
      </h2>
      <p
        class="c6 c7"
      >
        Let's talk.
      </p>
      <div
        class="c8"
      >
        <a
          aria-label="Email me"
          class="c9 c10"
          href="mailto:a.agostini92@gmail.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Email me
        </a>
      </div>
    </section>
  </section>
</div>
`;

exports[`Contact renders correctly with all links 1`] = `
.c0 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c8 {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c9 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c9:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c10 {
  font-size: 1rem;
  font-weight: 700;
}

.c7 {
  line-height: 1.7;
  margin-bottom: 2rem;
  max-width: 600px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (hover: hover) {
  .c9:hover {
    color: var(--color-tertiary);
  }
}

<div>
  <section
    class="c0"
    id="contact"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Contact
      </p>
      <h2
        class="c4 c5"
      >
        Let's work together
      </h2>
      <p
        class="c6 c7"
      >
        Currently with capacity for new projects — remote frontend and tech lead roles, freelance, and consulting. If you're building something with React, Next.js, or Shopify — let's talk.
      </p>
      <div
        class="c8"
      >
        <a
          aria-label="Email me"
          class="c9 c10"
          href="mailto:a.agostini92@gmail.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Email me
        </a>
        <a
          aria-label="LinkedIn"
          class="c9 c10"
          href="https://linkedin.com/in/agostiniandrea"
          rel="noopener noreferrer"
          target="_blank"
        >
          LinkedIn
        </a>
        <a
          aria-label="GitHub"
          class="c9 c10"
          href="https://github.com/agostiniandrea"
          rel="noopener noreferrer"
          target="_blank"
        >
          GitHub
        </a>
      </div>
    </section>
  </section>
</div>
`;
